--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         }
     },
     "require": {
-        "shopware/core": "6.1.*"
+        "shopware/core": "6.1.*|6.2.*|6.3.*",
+        "shopware/storefront": "6.1.*|6.2.*|6.3.*"
     }
 }
